--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     
     height: 100vh;
-    background-image: url(backGrnd.png);
+    background-image: url(backGrnd.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
